--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -3,4 +3,5 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=12301
 DB_DATABASE=trello-like-back
+DB_ENTITIES=dist/src/**/**/*.entity.js
 JWT_SECRET=CF0Ia&fBS55h516CWot6V%rSSGPi76j609Qe@vuXCy$BXi1iYv
