--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -1,7 +1,7 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=12301
-DB_DATABASE=trello-like-back
+PGHOST=localhost
+PGPASSWORD=1111
+PGPORT=5432
+PGUSER=postgres
 DB_ENTITIES=dist/src/**/**/*.entity.js
 JWT_SECRET=CF0Ia&fBS55h516CWot6V%rSSGPi76j609Qe@vuXCy$BXi1iYv
+DATABASE_URL=postgres
