--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -1,7 +1,7 @@
+PGDATABASE=railway
 PGHOST=localhost
 PGPASSWORD=1111
 PGPORT=5432
 PGUSER=postgres
 DB_ENTITIES=dist/src/**/**/*.entity.js
 JWT_SECRET=CF0Ia&fBS55h516CWot6V%rSSGPi76j609Qe@vuXCy$BXi1iYv
-DATABASE_URL=postgres
